Possible fix to zoom out/visibility issue on mobile, due to centering

--- a/style.css
+++ b/style.css
@@ -54,13 +54,13 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     max-width: 1640px;
-    justify-content: center;
+    justify-content:flex-start;
     margin: auto;
     height: 100%;
 
     background-color: rgb(251, 251, 251);
 
-    
+
     box-sizing: border-box;
 }
 
